--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "audioconcat": "^0.1.4",
+    "dotenv": "^16.3.1",
+    "html-to-text": "^9.0.5",
     "openai": "^4.17.4"
   }
 }
