--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "audioconcat": "^0.1.4",
     "dotenv": "^16.3.1",
     "html-to-text": "^9.0.5",
+    "lamejs": "^1.2.1",
     "openai": "^4.17.4"
   }
 }
