--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# macOS system files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+
+# Node
+node_modules/
+dist/
+
+# Environment variables
 .env
-node_modules
 audio-outputs
+*.js
