--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@ dist/
 .env
 audio-outputs
 *.js
+
+# Ignore all files in text-inputs except example.html
+audiobooking/text-inputs/*
+!audiobooking/text-inputs/example.html
