--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "createAudiobook": "tsc && node ./index.js"
+    "createAudiobook": "tsc && node ./index.js",
+    "scrape-articles": "tsc && node ./audiobooking/utils/articleScraper.js"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +15,14 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/fs-extra": "^11.0.4",
+    "@types/puppeteer": "^7.0.4",
     "audioconcat": "^0.1.4",
     "dotenv": "^16.3.1",
+    "fs-extra": "^11.2.0",
     "html-to-text": "^9.0.5",
     "lamejs": "^1.2.1",
-    "openai": "^4.17.4"
+    "openai": "^4.17.4",
+    "puppeteer": "^21.9.0"
   }
 }
