Update .gitignore to include uploadAudioInfo.ts, add new script for uploading audio info in package.json, and remove obsolete delete-files.js and delete-files.ts from openai directory.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ audio-outputs
 # Ignore all files in text-inputs except example.html
 audiobooking/text-inputs/*
 !audiobooking/text-inputs/example.html
+audiobooking/utils/uploadAudioInfo.ts
